Fixing padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ h4 {
 }
 .mySlides p {
     text-align: justify;
-    height: 180px;
+    height: 210px;
     padding-bottom: 20px;
 }
 .content {
